--- a/src/assets/coral/index.html
+++ b/src/assets/coral/index.html
@@ -38,28 +38,61 @@
                     <!-- DROPDOWN  -->
                     <div>
                         <h2>Dropdown Button</h2>
-                        <div class="dropdown">
-                            <button id="down" class="button btn-primary-light dropdown-button">show</button>
-                            <div class="dropdown-menu" data-visible="hide">
-                                <div class="arrow-up"></div>
+                        <div class="dropdown is-active">
+                            <div class="dropdown-trigger">
+                                <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
+                                    <span>Dropdown button</span>
+                                    <span class="icon is-small">
+                                        <i class="fas fa-angle-down" aria-hidden="true"></i>
+                                    </span>
+                                </button>
+                            </div>
+                            <div class="dropdown-menu" id="dropdown-menu" role="menu">
                                 <div class="dropdown-content">
-                                    <a href="#">Home</a>
-                                    <a href="#">About</a>
-                                    <a href="#">Service</a>
-                                    <a href="#">Contact</a>
+                                    <a href="#" class="dropdown-item">
+                                        Dropdown item
+                                    </a>
+                                    <a class="dropdown-item">
+                                        Other dropdown item
+                                    </a>
+                                    <a href="#" class="dropdown-item is-active">
+                                        Active dropdown item
+                                    </a>
+                                    <a href="#" class="dropdown-item">
+                                        Other dropdown item
+                                    </a>
+                                    <hr class="dropdown-divider">
+                                    <a href="#" class="dropdown-item">
+                                        With a divider
+                                    </a>
                                 </div>
                             </div>
                         </div>
 
+
                         <div class="dropdown">
-                            <button id="down" class="button btn-primary dropdown-button">show</button>
-                            <div class="dropdown-menu" data-visible="hide">
-                                <div class="arrow-up"></div>
+                            <div class="dropdown-trigger">
+                                <button class="button" aria-haspopup="true" aria-controls="dropdown-menu2">
+                                    <span>Content</span>
+                                    <span class="icon is-small">
+                                        <i class="fas fa-angle-down" aria-hidden="true"></i>
+                                    </span>
+                                </button>
+                            </div>
+                            <div class="dropdown-menu" id="dropdown-menu2" role="menu">
                                 <div class="dropdown-content">
-                                    <a href="#">Home</a>
-                                    <a href="#">About</a>
-                                    <a href="#">Service</a>
-                                    <a href="#">Contact</a>
+                                    <div class="dropdown-item">
+                                        <p>You can insert <strong>any type of content</strong> within the dropdown
+                                            menu.</p>
+                                    </div>
+                                    <hr class="dropdown-divider">
+                                    <div class="dropdown-item">
+                                        <p>You simply need to use a <code>&lt;div&gt;</code> instead.</p>
+                                    </div>
+                                    <hr class="dropdown-divider">
+                                    <a href="#" class="dropdown-item">
+                                        This is a link
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -133,7 +166,7 @@
                         <h2>Input tag</h2>
                         <div class="input-tag">
                             <div class="input-tag-content"></div>
-                            <input type="text" id="tag_input" value="" />
+                            <input type="text" id="tag_input" value="" class="tag_input" />
                         </div>
 
                     </section>
